upcoming evnts section added

--- a/index.html
+++ b/index.html
@@ -37,22 +37,26 @@
 
   <body>
     <section class="alert-relative">
-    <section class="alert-absolute" style="display: none;">
-      <!-- alert -->
-      <div class="alert-div alert-container">
-        <div class="alert-image-div">
-          <span class="closeButton">&times;</span>
-          <h2><a href="contact.html" style="text-decoration: none; color: white;">Click here to contact us</a></h2>
-          <a href="contact.html">
-          <img
-            class="alert-image"
-            src="./images/alert-image.png"
-            id="myImage"
-            alt="alert-image"
-          /></a>
+      <section class="alert-absolute" style="display: none">
+        <!-- alert -->
+        <div class="alert-div alert-container">
+          <div class="alert-image-div">
+            <span class="closeButton">&times;</span>
+            <h2>
+              <a href="contact.html" style="text-decoration: none; color: white"
+                >Click here to contact us</a
+              >
+            </h2>
+            <a href="contact.html">
+              <img
+                class="alert-image"
+                src="./images/alert-image.png"
+                id="myImage"
+                alt="alert-image"
+            /></a>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
       <!-- topbar section -->
       <section class="topbar-section">
@@ -86,8 +90,7 @@
             <a href="https://t.me/rrccacmaacademy"
               ><i class="fa-brands fa-telegram"></i
             ></a>
-            <a
-              href="https://www.instagram.com/rrc_academy_of_audit/"
+            <a href="https://www.instagram.com/rrc_academy_of_audit/"
               ><i class="fa-brands fa-square-instagram"></i
             ></a>
             <a href="https://youtube.com/@rrcacademy9723?si=_CGllWUHdZgPGukO"
@@ -257,20 +260,21 @@
         <div class="welcome-div">
           <div class="welcome-div0"></div>
           <div class="welcome-div1">
-           <p style="text-align: justify;"><span style="color: red;font-size: larger;">RRC Academy</span> is a Professional CA/CMA Coaching Institute
-            in Thanjavur, India, founded with the vision of Creating Quality
-            Chartered Accountants / Cost and Management Accountant has been a
-            stepping stone to the success of Aspiring Students. With an
-            efficient team of Eminent Faculty Members, Best Infrastructure,
-            Conducive Learning Atmosphere and Highest levels of Concern for the
-            Students.
-            <!-- <br> <br>
+            <p style="text-align: justify">
+              <span style="color: red; font-size: larger">RRC Academy</span> is
+              a Professional CA/CMA Coaching Institute in Thanjavur, India,
+              founded with the vision of Creating Quality Chartered Accountants
+              / Cost and Management Accountant has been a stepping stone to the
+              success of Aspiring Students. With an efficient team of Eminent
+              Faculty Members, Best Infrastructure, Conducive Learning
+              Atmosphere and Highest levels of Concern for the Students.
+              <!-- <br> <br>
             It is most cherished by its students. With
             its motto of imparting Knowledge, Skill and Attitude, RRC strives
             consistently in shaping the future of every Student holistically. -->
-          </p>
+            </p>
           </div>
-      </div>
+        </div>
       </section>
 
       <!-- Our Courses Section  -->
@@ -345,6 +349,18 @@
         <h3><a href="./CA-foundational.html">View All</a></h3>
       </section>
 
+      <!-- Upcoming Events Section  -->
+      <section id="upcoming_events_section">
+        <div>
+          <h1>Upcoming Events</h1>
+          <div>
+            <h3>CA/CMA Workshop</h3>
+            <img src="./images/CA-FDN.png" alt="" />
+          </div>
+          <a class="btn btn-lg btn-outline-primary" href="">Register</a>
+        </div>
+      </section>
+
       <!-- Testimonial Section  -->
       <section class="testimonial-section">
         <h2>Our Testimonials</h2>
@@ -405,7 +421,10 @@
             </div>
           </div>
           <div class="opacity">
-            <img src="./images/staffs/ramya-mam-bg-removed.png" alt="RRC-CA-staff" />
+            <img
+              src="./images/staffs/ramya-mam-bg-removed.png"
+              alt="RRC-CA-staff"
+            />
             <div>
               <h5>Mrs.T.Ramya.,</h5>
               <p>M.Sc.,B.Ed.</p>
@@ -472,7 +491,7 @@
             name="_next"
             value="https://www.rrc-academyofaudit.com/thanks.html"
           />
-            <div class="submit-div">
+          <div class="submit-div">
             <button
               class="submit-btn bg-primary text-light"
               id="contact-submit-btn"
@@ -498,12 +517,16 @@
             <h4>Contact Us</h4>
             <p>
               <i class="fa-solid fa-location-dot"></i>&nbsp; 82, 1st Floor, Deen
-              Complex, <br>Mary's Corner, Thanjavur.
+              Complex, <br />Mary's Corner, Thanjavur.
             </p>
             <p>
-              <i class="fa-solid fa-phone"></i>&nbsp; +91 96296 89066 <br> +91 80156 96970
+              <i class="fa-solid fa-phone"></i>&nbsp; +91 96296 89066 <br />
+              +91 80156 96970
             </p>
-            <p><i class="fa-solid fa-envelope"></i>&nbsp; rrcacademyofaudit@gmail.com</p>
+            <p>
+              <i class="fa-solid fa-envelope"></i>&nbsp;
+              rrcacademyofaudit@gmail.com
+            </p>
           </div>
           <div class="foot-container col-lg-4">
             <h4>Also by us</h4>
@@ -519,7 +542,6 @@
       <section class="copyright-section bg-dark bg-opacity-50 p-3">
         <p>Copyright © 2024 RRC Academy. All rights reserved.</p>
       </section>
-
     </section>
 
     <script
@@ -528,6 +550,5 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
-
   </body>
 </html>
