students name updated

--- a/public/courses.html
+++ b/public/courses.html
@@ -15,6 +15,7 @@
         <div><a href="./web-dev.html">WEB DEVELOPMENT</a></div>
         <div><a href="./web-design.html">WEB DESIGN</a></div>
         <div><a href="./python.html">PYTHON</a></div>
+        <div><a href="./machine_learning.html">MACHINE LEARNING</a></div>
       </div>
 </body>
 </html>
