--- a/public/machine_learning.html
+++ b/public/machine_learning.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEB DESIGN</title>
+    <title>MACHINE LEARNING</title>
 
     <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -13,7 +13,7 @@
       <img src="../images/company-logo.png" alt="company-logo" />
     </header>
     <div>
-      <h1>STUDENTS SUCCESSFULLY COMPLETED OUR WEB DESIGN COURSE</h1>
+      <h1>STUDENTS SUCCESSFULLY COMPLETED OUR MACHINE LEARNING COURSE</h1>
       <table>
         <tr>
           <th>S.NO.</th>
@@ -21,32 +21,32 @@
         </tr>
         <tr>
           <td>1</td>
-          <td>S.NITHEESHVAR</td>
+          <td>K.RAJAPRABU</td>
         </tr>
-        <tr>
+        <!-- <tr>
           <td>2</td>
-          <td>M.NITHEESH</td>
+          <td>J.MAGTHALINE TAMIZHINI</td>
         </tr>
         <tr>
           <td>3</td>
-          <td>S.NAVEEN</td>
+          <td>MANOJ ADITHIYA</td>
         </tr>
         <tr>
           <td>4</td>
-          <td>K.MEENA</td>
+          <td>SHAKTHIMAHESWARAN.S</td>
         </tr>
         <tr>
           <td>5</td>
-          <td>A.NANDHINI</td>
+          <td>S.M.HARISH</td>
         </tr>
         <tr>
           <td>6</td>
-          <td>K.LAVANYA</td>
+          <td>S.KANIMOZHI</td>
         </tr>
         <tr>
           <td>7</td>
-          <td>R.VIJI</td>
-        </tr>
+          <td>A.ROSHAN ARUL</td>
+        </tr> -->
       </table>
     </div>
   </body>
