--- a/public/python.html
+++ b/public/python.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <img src="../images/rrc-academy-logo-wide.jpeg" alt="company-logo" />
+      <img src="../images/company-logo.png" alt="company-logo" />
     </header>
     <div>
       <h1>STUDENTS SUCCESSFULLY COMPLETED OUR PYTHON COURSE</h1>
@@ -27,11 +27,11 @@
           <td>2</td>
           <td>J.MAGTHALINE TAMIZHINI</td>
         </tr>
-        <!-- <tr>
+         <tr>
           <td>3</td>
-          <td>MANOJ ADITHIYA</td>
+          <td>G.JAYA</td>
         </tr>
-        <tr>
+        <!--<tr>
           <td>4</td>
           <td>SHAKTHIMAHESWARAN.S</td>
         </tr>
