--- a/public/student.html
+++ b/public/student.html
@@ -18,6 +18,7 @@
       <div><a href="../public/seminar/seminar.html">WORKSHOP</a></div>
       <div><a href="../public/competition.html">COMPETITION</a></div>
       <div><a href="../public/webinar.html">WEBINAR</a></div>
+      <div><a href="../public/internship.html">INTERNSHIP</a></div>
     </div>
    
   </body>
