--- a/public/web-dev.html
+++ b/public/web-dev.html
@@ -21,25 +21,25 @@
         </tr>
         <tr>
           <td>1</td>
-          <td></td>
+          <td>P.MADHUBALA</td>
         </tr>
-        <!-- <tr>
+         <tr>
           <td>2</td>
-          <td>R.DHINESH</td>
+          <td>D.AKSHAYA</td>
         </tr>
         <tr>
           <td>3</td>
-          <td>MANOJ ADITHIYA</td>
+          <td>A.ABDUL MAJEED</td>
         </tr>
         <tr>
           <td>4</td>
-          <td>SHAKTHIMAHESWARAN.S</td>
+          <td>S.NITHEESHVAR</td>
         </tr>
         <tr>
           <td>5</td>
-          <td>S.M.HARISH</td>
+          <td>M.NITHEESH</td>
         </tr>
-        <tr>
+        <!--<tr>
           <td>6</td>
           <td>S.KANIMOZHI</td>
         </tr>
