--- a/events.html
+++ b/events.html
@@ -137,18 +137,23 @@
                 <video controls muted autoplay class="seminar VID">
                   <source src="./images/seminar/seminarVID.mp4">
                 </video>
+                <h1 class="text-center">How To Become a CA CMA Seminar</h1>
               <div>
-                <!--<img src="./images/seminar/IMG-1.jpg" alt="">-->
+                <img src="./images/seminar/How to become a CA Seminar-1.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-2.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-3.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-4.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-5.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-6.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-7.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-8.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-9.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-10.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-11.jpeg" alt="">
+                <img src="./images/seminar/How to become a CA Seminar-12.jpeg" alt="">
                 <img src="./images/seminar/IMG-2.jpg" alt="">
                 <img src="./images/seminar/IMG-3.jpg" alt="">
-                <!--<img src="./images/seminar/IMG-4.jpg" alt="">-->
-                <!--<img src="./images/seminar/IMG-5.jpg" alt="">-->
                 <img src="./images/seminar/IMG-7.jpg" alt="">
-                <!--<img src="./images/seminar/IMG-8.jpg" alt="">-->
-                <!--<img src="./images/seminar/IMG-9.jpg" alt="">-->
-                <!--<img src="./images/seminar/IMG-11.jpg" alt="">-->
-                <!--<img src="./images/seminar/IMG-13.jpg" alt="">-->
-                <!--<img src="./images/seminar/IMG-14.jpg" alt="">-->
               </div>
             </div>
           </div>
