--- a/public/tally.html
+++ b/public/tally.html
@@ -18,17 +18,37 @@
         <tr>
           <th>S.NO.</th>
           <th>NAME</th>
-          <th>COLLEGE</th>
+          <!-- <th>COLLEGE</th> -->
         </tr>
         <tr>
           <td>1</td>
           <td>M.YOGAPRIYA</td>
-          <td>BON SECOURS COLLEGE FOR WOMEN</td>
+          <!-- <td>BON SECOURS COLLEGE FOR WOMEN</td> -->
         </tr>
         <tr>
           <td>2</td>
           <td>P.AMMUSANKARAVALLI</td>
-          <td>BON SECOURS COLLEGE FOR WOMEN</td>
+          <!-- <td>BON SECOURS COLLEGE FOR WOMEN</td> -->
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>A.R. ANNAMALAI</td>
+          <!-- <td>BON SECOURS COLLEGE FOR WOMEN</td> -->
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>R.B.YUVASRI</td>
+          <!-- <td>BON SECOURS COLLEGE FOR WOMEN</td> -->
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>K.VAISHNAVI</td>
+          <!-- <td>BON SECOURS COLLEGE FOR WOMEN</td> -->
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>B. RAGALAKSHMI</td>
+          <!-- <td>BON SECOURS COLLEGE FOR WOMEN</td> -->
         </tr>
       </table>
     </div>
