--- a/public/web-dev.html
+++ b/public/web-dev.html
@@ -39,14 +39,18 @@
           <td>5</td>
           <td>M.NITHEESH</td>
         </tr>
-        <!--<tr>
+        <tr>
           <td>6</td>
-          <td>S.KANIMOZHI</td>
+          <td>S.S.AKILAN</td>
         </tr>
         <tr>
           <td>7</td>
-          <td>A.ROSHAN ARUL</td>
-        </tr> -->
+          <td>S. MADHUMIDHA</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>A. ARCHANA</td>
+        </tr>
       </table>
     </div>
   </body>
