--- a/public/ui_ux.html
+++ b/public/ui_ux.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PYTHON</title>
+    <title>UI/UX DESIGN</title>
 
     <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -13,7 +13,7 @@
       <img src="../images/company-logo.png" alt="company-logo" />
     </header>
     <div>
-      <h1>STUDENTS SUCCESSFULLY COMPLETED OUR PYTHON COURSE</h1>
+      <h1>STUDENTS SUCCESSFULLY COMPLETED OUR UI/UX DESIGN COURSE</h1>
       <table>
         <tr>
           <th>S.NO.</th>
@@ -21,13 +21,13 @@
         </tr>
         <tr>
           <td>1</td>
-          <td>R.KRISHNAVENI</td>
+          <td>V. AKSHAYA THANGAM</td>
         </tr>
         <tr>
           <td>2</td>
-          <td>J.MAGTHALINE TAMIZHINI</td>
+          <td>S. KARPAGA SENETHA</td>
         </tr>
-         <tr>
+        <!-- <tr>
           <td>3</td>
           <td>G.JAYA</td>
         </tr>
@@ -35,7 +35,7 @@
           <td>4</td>
           <td>S.SANJAY KUMAR</td>
         </tr>
-        <!--<tr>
+        <tr>
           <td>5</td>
           <td>S.M.HARISH</td>
         </tr>
