students added in python

--- a/public/python.html
+++ b/public/python.html
@@ -35,15 +35,15 @@
           <td>4</td>
           <td>S.SANJAY KUMAR</td>
         </tr>
-        <!--<tr>
+        <tr>
           <td>5</td>
-          <td>S.M.HARISH</td>
+          <td>ANANTHI</td>
         </tr>
         <tr>
           <td>6</td>
-          <td>S.KANIMOZHI</td>
+          <td>MONISHA</td>
         </tr>
-        <tr>
+       <!-- <tr>
           <td>7</td>
           <td>A.ROSHAN ARUL</td>
         </tr> -->
